--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,13 +7,14 @@
     android:orientation="vertical">
 
     <Button
-        android:layout_width="match_parent"
+        android:id="@+id/refresh"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Book"
-        android:onClick="refreshBooks"/>
+        <!--android:onClick="fetchAllBooks"-->
+        android:text="Refresh" />
 
     <ListView
-        android:id="@+id/listView_book_list"
+        android:id="@+id/listView_booklist"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
