--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,14 +7,12 @@
     android:orientation="vertical">
 
 
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:weightSum="1">
 
         <EditText
-            android:hint="Search your book..."
             android:id="@+id/editText"
             android:layout_width="178dp"
             android:layout_height="wrap_content"
@@ -23,22 +21,21 @@
             android:layout_alignParentTop="true"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
-            android:layout_weight="1.03" />
+            android:layout_weight="1.03"
+            android:hint="Search your book..." />
 
         <RadioGroup
             android:id="@+id/radioGroup"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            >
+            android:layout_height="wrap_content">
 
-        <RadioButton
-            android:id="@+id/titleBtn"
-            android:layout_width="83dp"
-            android:layout_height="wrap_content"
-            android:text="title"
-            android:checked="true"
-            android:onClick="searchID"
-            />
+            <RadioButton
+                android:id="@+id/titleBtn"
+                android:layout_width="83dp"
+                android:layout_height="wrap_content"
+                android:checked="true"
+                android:onClick="searchID"
+                android:text="title" />
 
             <RadioButton
                 android:id="@+id/yearBtn"
@@ -51,22 +48,27 @@
 
     </LinearLayout>
 
-    <CheckBox
+    <RadioGroup
+        android:id="@+id/radioGroup2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+    <RadioButton
         android:id="@+id/sortTitle"
-        android:layout_width="match_parent"
+        android:layout_width="419dp"
         android:layout_height="wrap_content"
         android:checked="false"
         android:onClick="sortTitleBtn"
         android:text="Sort by title" />
 
-    <CheckBox
+    <RadioButton
         android:id="@+id/sortYear"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:checked="false"
-        android:text="Sort by year"
         android:onClick="sortYearBtn"
-        />
+        android:text="Sort by year" />
+    </RadioGroup>
+
 
     <Button
         android:id="@+id/refresh"
